--- a/src/style/style.css
+++ b/src/style/style.css
@@ -1,6 +1,10 @@
 :root {
-    --primary-color: linear-gradient(0deg, #ACCBEE 0%, #E7F0FD 100%);
-    /* --primary-color: linear-gradient(60deg, #29323c 0%, #485563 100%); */
+
+    /*=== LIGHT ===*/
+    /* --primary-color: linear-gradient(0deg, #ACCBEE 0%, #E7F0FD 100%); */
+
+    /*=== DARK ===*/
+    --primary-color: linear-gradient(60deg, #29323c 0%, #485563 100%);
     --secondary-color: linear-gradient(19deg, #21D4FD 0%, #B721FF 100%);
     --auxiliary-color-one: #B721FF;
     --auxiliary-color-two: #2E82FF;
@@ -191,14 +195,17 @@ form.sign-form {
     border-radius: 5px;
     padding: 20px;
 }
+
 .user-datails h2 {
     font-size: 1rem;
     color: var(--auxiliary-color-three);
     margin-bottom: 20px;
 }
+
 .user-datails h2:last-child {
     margin-bottom: 0;
 }
+
 .user-datails span {
     color: #000000;
 }
@@ -213,6 +220,26 @@ form.sign-form {
     color: var(--auxiliary-color-three);
     font-size: 1.1rem;
     font-weight: 700;
+}
+
+.not-found h2 {
+    font-size: 1.4rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+}
+
+.private-route {
+    text-align: center;
+}
+
+.private-route h2 {
+    font-size: 1.4rem;
+}
+.private-route h2 a {
+    font-size: 1rem;
+    color: var(--auxiliary-color-one);
 }
 
 /*=================== RESPONSIVE ===================*/
@@ -249,7 +276,7 @@ form.sign-form {
     #btn-send {
         cursor: pointer;
     }
-    
+
     #btn-logout {
         cursor: pointer;
     }
